# fft-lms

./: CMakeLists.txt
app/: CMakeLists.txt  lms.cpp
include/: dft.hpp  fft.hpp  ft.hpp
lib/fftw-3.3.9/: Makefile  config.status  libtool
lib/fftw-3.3.9/api/: Makefile
lib/fftw-3.3.9/dft/: Makefile
lib/fftw-3.3.9/dft/scalar/: Makefile
lib/fftw-3.3.9/dft/scalar/codelets/: Makefile
lib/fftw-3.3.9/dft/simd/: Makefile
lib/fftw-3.3.9/dft/simd/altivec/: Makefile
lib/fftw-3.3.9/dft/simd/avx/: Makefile
lib/fftw-3.3.9/dft/simd/avx-128-fma/: Makefile
lib/fftw-3.3.9/dft/simd/avx2/: Makefile
lib/fftw-3.3.9/dft/simd/avx2-128/: Makefile
lib/fftw-3.3.9/dft/simd/avx512/: Makefile
lib/fftw-3.3.9/dft/simd/common/: Makefile
lib/fftw-3.3.9/dft/simd/generic-simd128/: Makefile
lib/fftw-3.3.9/dft/simd/generic-simd256/: Makefile
lib/fftw-3.3.9/dft/simd/kcvi/: Makefile
lib/fftw-3.3.9/dft/simd/neon/: Makefile
lib/fftw-3.3.9/doc/: Makefile
lib/fftw-3.3.9/doc/FAQ/: Makefile
lib/fftw-3.3.9/genfft/: Makefile
lib/fftw-3.3.9/kernel/: Makefile
lib/fftw-3.3.9/libbench2/: Makefile
lib/fftw-3.3.9/m4/: Makefile
lib/fftw-3.3.9/mpi/: Makefile
lib/fftw-3.3.9/rdft/: Makefile
lib/fftw-3.3.9/rdft/scalar/: Makefile
lib/fftw-3.3.9/rdft/simd/: Makefile
lib/fftw-3.3.9/reodft/: Makefile
lib/fftw-3.3.9/simd-support/: Makefile
lib/fftw-3.3.9/support/: Makefile
lib/fftw-3.3.9/tests/: Makefile  bench
lib/fftw-3.3.9/threads/: Makefile
lib/fftw-3.3.9/tools/: Makefile  fftw-wisdom
source/: CMakeLists.txt  dft.cpp  fft.cpp
(+18 files in other folders)
